cmake_minimum_required(VERSION 3.15)
project(learn_cpp_with_cpp_primer)

set(CMAKE_CXX_STANDARD 11)

add_executable(learn_cpp_with_cpp_primer
        main.cpp
        ch1_getting_started.cpp
        ch1_getting_started.h
        ch2_variables_and_basic_types.cpp
        ch2_variables_and_basic_types.h
        ch3_strings_vectors_and_arrays.cpp
        ch3_strings_vectors_and_arrays.h
        transaction_processing.cpp
        transaction_processing.h
        Sales_data.cpp
        Sales_data.h
        Screen.h
        Screen.cpp
        ch10_generic_algorithms.cpp
        ch10_generic_algorithms.h
        ch11_associative_containers.cpp
        ch11_associative_containers.h
        ch12_dynamic_memory_and_smart_pointers.cpp
        ch12_dynamic_memory_and_smart_pointers.h
        StrBlob.cpp
        StrBlob.h
        TextQuery.cpp
        TextQuery.h
        QueryResult.cpp
        QueryResult.h
        HasPtrValue.cpp
        HasPtrValue.h
        HasPtrPointer.cpp
        HasPtrPointer.h
        Message.cpp
        Message.h
        Folder.cpp
        Folder.h
        Quote.cpp
        Quote.h
        Bulk_quote.cpp
        Bulk_quote.h
        ch15_oop.cpp
        ch15_oop.h
        Disc_quote.cpp
        Disc_quote.h
        Query_base.cpp
        Query_base.h
        Query.cpp
        Query.h
        WordQuery.cpp
        WordQuery.h
        NotQuery.cpp
        NotQuery.h
        BinaryQuery.cpp
        BinaryQuery.h
        AndQuery.cpp
        AndQuery.h
        OrQuery.cpp
        OrQuery.h
        ch16_templates_and_generic_programming.cpp
        ch16_templates_and_generic_programming.h
        Blob.h)